--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -1,103 +1,280 @@
-/* Centering and mobile responsiveness */
 .product-body {
-  width: 100%;
-  height: auto; /* Change to auto for responsiveness */
-  padding: 0; /* Remove padding */
-  margin: 0 auto; /* Center horizontally */
+  width: 100vw;
+  height: 100vh;
 }
 
-.product-body1,
-.product-body2 {
+.product-body1 {
   width: 100%;
-  height: auto; /* Change to auto for responsiveness */
+  height: 100%;
   padding-top: 30px;
+  margin-right: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center items horizontally */
-  font-family: "gordita", "sans-serif"; /* Correct typo in font-family */
-}
+  font-family: 'gordita', 'sans-selif';
 
-.product-body1 .product-top {
-  width: 100%;
-  background: linear-gradient(90deg, rgb(239, 175, 175), rgba(226, 216, 35, 0.2), white);
-  padding: 50px;
-  text-align: center; /* Center text horizontally */
-}
+  .product-top {
+    width: 100%;
+    background: linear-gradient(
+      90deg,
+      rgba(239, 175, 175, 1),
+      rgba(226, 216, 35, 0.2),
+      white
+    );
+    padding: 50px;
 
-.product-body1 .product-bottom {
-  padding: 50px;
-  width: 100%;
-  background-color: rgb(245, 245, 245);
-  text-align: center; /* Center text horizontally */
-}
+    .dfmBtn {
+      padding: 5px 20px;
+      margin: 10px;
+      border-radius: 8px;
+      cursor: pointer;
+      background-color: rgb(237, 66, 66);
+      color: white;
+    }
 
-.product-body1 .product-bottom .contributor-div {
-  display: flex;
-  flex-wrap: wrap; /* Allow items to wrap */
-  justify-content: center; /* Center items horizontally */
-}
+    .dfmBtn:hover {
+      background-color: rgb(235, 37, 37);
+    }
+  }
 
-.product-body1 .product-bottom .contributor-div div {
-  margin: 10px; /* Adjust margin for spacing */
+  .product-bottom {
+    padding: 50px;
+    height: 60%;
+    width: 100%;
+    background-color: rgb(245, 245, 245);
+
+    .contributor-div {
+      display: flex;
+      margin-top: 30px;
+      justify-content: center;
+
+      div {
+        margin: 30px;
+
+        img {
+          background-color: grey;
+          border-radius: 20%;
+          object-fit: cover;
+        }
+
+        p {
+          margin-left: 25px;
+        }
+      }
+    }
+  }
 }
 
 .product-body2 {
+  width: 100%;
+  height: 100%;
   padding-top: 30px;
   display: flex;
-  flex-direction: column;
-  align-items: center; /* Center items horizontally */
-  font-family: "gordita", "sans-serif"; /* Correct typo in font-family */
+  position: relative;
+  top: 0;
+  font-family: 'gordita', 'sans-selif';
+
+  .product-left {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 50px 0;
+
+    h3 {
+      margin: 30px 50px;
+    }
+
+    .option-container-nav {
+      margin: 20px;
+      width: auto;
+
+      .nav-item {
+        margin: auto;
+        width: 40%;
+        font-size: 12px;
+      }
+    }
+
+    .option-container {
+      margin: 10px;
+      padding: 20px 0;
+
+
+
+
+      h5,
+      p {
+        // margin: 0;
+        padding: 2px 10px;
+        color: black;
+      }
+      p {
+        font-size: 12px;
+      }
+
+      .optionInputBox {
+        overflow-y: auto;
+        margin: 10px 10px;
+
+        .option-div {
+          display: flex;
+          flex-direction: column;
+
+          label {
+            font-size: 12px;
+          }
+
+          input {
+            width: 50%;
+          }
+        }
+
+        .optionBtn {
+          width: 50%;
+          margin-top: 10px;
+          font-size: 10px;
+        }
+
+        .add {
+          border: 2px dotted rgb(237, 66, 66);
+          color: rgb(237, 66, 66);
+          border-radius: 10px;
+        }
+
+        .decide{
+          background-color: rgba(239, 175, 175, 1);
+          border-radius: 10px;
+          color: red;
+          
+        
+        }
+      }
+
+
+    .checkbox-div{
+        min-width: 500px;
+            .checkbox-word{
+                
+                i{
+                        background-color: rgb(45, 43, 43);
+                        color: white;
+                        font-size: 10px;
+                        padding: 0 5px;
+                        text-align: center;
+                        width: fit-content;
+                
+                
+                }
+            }
+            
+        
+        .checkbox-group{
+            margin-left: 20px;
+        }
+        .decideBtn{
+            margin-left: 20px;
+            background-color: rgba(239, 175, 175, 1);
+            border-radius: 10px;
+            color: white;
+            font-size: 10px;
+            width: 40%;
+            
+        }
+        
+    }
+
+
+
+
+    }
+
+
+  }
+
+  .product-right {
+    width: 50%;
+    background: linear-gradient(
+      90deg,
+      rgba(239, 175, 175, 1),
+      rgba(226, 216, 35, 0.2)
+    );
+  }
 }
 
-.product-body2 .product-left,
-.product-body2 .product-right {
-  width: 100%;
-  padding: 0 20px; /* Add padding for spacing */
-}
 
-.product-body2 .product-left h3 {
-  margin: 30px auto; /* Center horizontally */
-}
 
-.product-body2 .product-left .option-container-nav,
-.product-body2 .product-left .option-container {
-  width: 100%;
-  padding: 20px 0;
-}
-
-.product-body2 .product-left .option-container .optionInputBox .option-div input {
-  width: 100%; /* Adjust input width */
-}
-
-/* Media queries for mobile responsiveness */
 @media only screen and (max-width: 768px) {
-  .product-body1,
-  .product-body2 {
+  .product-body1 {
     font-size: 12px;
+
+    .product-bottom {
+      padding: 30px;
+      height: 60%;
+
+      .contributor-div {
+        flex-wrap: wrap;
+
+        div {
+          margin: 0;
+          width: 50%;
+          max-width: calc(50% - 60px);
+        }
+      }
+    }
+  }
+
+  .product-body2 {
+    flex-direction: column;
+    top: 0;
+
+    .product-left,
+    .product-right {
+      width: 100%;
+    }
+
+    .product-left {
+      .option-container-nav {
+        #navBtn {
+          color: red;
+        }
+      }
+
+   
+    }
+    
+
+   
   }
 }
 
 @media only screen and (max-width: 375px) {
-  .product-body1 .product-top {
-    font-size: 10px;
-    padding-bottom: 20px;
-    height: 50%;
-  }
-  .product-body1 .product-bottom {
-    padding: 20px;
-  }
-  .product-body1 .product-bottom .contributor-div {
-    margin: 0;
-    padding: 0;
-  }
-  .product-body1 .product-bottom .contributor-div div {
-    margin: 10px;
-  }
-  .product-body2 .option-container {
-    height: 50%;
-    overflow-y: auto;
-  }
+  .product-body1 {
+    .proudct-top {
+      font-size: 10px;
+      padding-bottom: 20px;
+      height: 50%;
+    }
 
+    .product-bottom {
+      padding: 20px;
 
+      .contributor-div {
+        margin: 0;
+        padding: 0;
+
+        div {
+          margin: 10px;
+        }
+      }
+    }
+  }
+  .product-body2{
+    .option-container{
+        
+            height: 50%;
+            overflow-y: auto;
+        
+    }
+  }
+ 
 }
-
