added API functionality and filter

--- a/src/assets/scss/_responsive.scss
+++ b/src/assets/scss/_responsive.scss
@@ -1,10 +1,4 @@
-/* Responsive CSS Document */
-
-/* 
-    Theme Name   : Deski-Saas & Software React Template
-    Developed by : ib-themes
-   
-*/
+// Code:
 @media (min-width: 1350px) {
   .lg-container .container {
     max-width: 1320px;
