--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -3,6 +3,18 @@
   height: 100vh;
 }
 
+.product-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background: linear-gradient(45deg, rgb(100, 74, 246), rgb(255, 219, 250));
+  padding: 50px;
+  width: 100%;
+  padding: 95px;
+  flex-direction: column;
+}
+
 .product-body1 {
   width: 100%;
   height: 100%;
@@ -12,27 +24,31 @@
   flex-direction: column;
   font-family: "gordita", "sans-selif";
 }
+.product-body1 .wt {
+  color: white;
+  margin: 10px 0;
+}
 .product-body1 .product-top {
   width: 100%;
-  background: linear-gradient(90deg, rgb(239, 175, 175), rgba(226, 216, 35, 0.2), white);
-  padding: 50px;
+  background: linear-gradient(45deg, rgb(100, 74, 246), rgb(255, 219, 250));
+  padding: 100px;
 }
 .product-body1 .product-top .dfmBtn {
   padding: 5px 20px;
   margin: 10px;
   border-radius: 8px;
   cursor: pointer;
-  background-color: rgb(237, 66, 66);
-  color: white;
+  background-color: rgb(255, 203, 140);
+  border: none;
 }
 .product-body1 .product-top .dfmBtn:hover {
-  background-color: rgb(235, 37, 37);
+  background-color: rgb(238, 176, 99);
 }
 .product-body1 .product-bottom {
   padding: 50px;
-  height: 60%;
+  height: 70%;
   width: 100%;
-  background-color: rgb(245, 245, 245);
+  background-color: rgba(255, 219, 250, 0.1);
 }
 .product-body1 .product-bottom .contributor-div {
   display: flex;
@@ -55,11 +71,12 @@
 .product-body2 {
   width: 100%;
   height: 100%;
-  padding-top: 30px;
   display: flex;
+  justify-content: center;
   position: relative;
   top: 0;
   font-family: "gordita", "sans-selif";
+  background-color: rgba(255, 219, 250, 0.2);
 }
 .product-body2 .product-left {
   width: 50%;
@@ -69,84 +86,44 @@
   padding: 50px 0;
 }
 .product-body2 .product-left h3 {
-  margin: 30px 50px;
+  text-align: center;
 }
 .product-body2 .product-left .option-container-nav {
-  margin: 20px;
-  width: auto;
+  margin: 20px 10%;
+  width: 100%;
 }
 .product-body2 .product-left .option-container-nav .nav-item {
   margin: auto;
   width: 40%;
   font-size: 12px;
 }
-.product-body2 .product-left .option-container {
+.product-body2 .product-left .option-container-nav .nav-content {
+  background: linear-gradient(45deg, rgb(100, 74, 246), rgb(255, 219, 250));
+  display: flex;
+  justify-content: center;
+  width: 80%;
   margin: 10px;
-  padding: 20px 0;
+  background-color: rgba(255, 219, 250, 0.5);
+  border-radius: 20px;
 }
-.product-body2 .product-left .option-container h5,
-.product-body2 .product-left .option-container p {
-  padding: 2px 10px;
+#product > div > div > div > div.product-left > div > ul > li:nth-child(1) > button {
+
+  color: rgb(72, 70, 58) !important;
+  
+}
+
+#product > div > div > div > div.product-left > div > div > div > div > div.option-div > label {
+
+  color: black;
+
+}
+
+#product > div > div > div > div.product-left > div > div > div > div > p {
   color: black;
 }
-.product-body2 .product-left .option-container p {
-  font-size: 12px;
-}
-.product-body2 .product-left .option-container .optionInputBox {
-  overflow-y: auto;
-  margin: 10px 10px;
-}
-.product-body2 .product-left .option-container .optionInputBox .option-div {
-  display: flex;
-  flex-direction: column;
-}
-.product-body2 .product-left .option-container .optionInputBox .option-div label {
-  font-size: 12px;
-}
-.product-body2 .product-left .option-container .optionInputBox .option-div input {
-  width: 50%;
-}
-.product-body2 .product-left .option-container .optionInputBox .optionBtn {
-  width: 50%;
-  margin-top: 10px;
-  font-size: 10px;
-}
-.product-body2 .product-left .option-container .optionInputBox .add {
-  border: 2px dotted rgb(237, 66, 66);
-  color: rgb(237, 66, 66);
-  border-radius: 10px;
-}
-.product-body2 .product-left .option-container .optionInputBox .decide {
-  background-color: rgb(239, 175, 175);
-  border-radius: 10px;
-  color: red;
-}
-.product-body2 .product-left .option-container .checkbox-div {
-  min-width: 500px;
-}
-.product-body2 .product-left .option-container .checkbox-div .checkbox-word i {
-  background-color: rgb(45, 43, 43);
-  color: white;
-  font-size: 10px;
-  padding: 0 5px;
-  text-align: center;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-.product-body2 .product-left .option-container .checkbox-div .checkbox-group {
-  margin-left: 20px;
-}
-.product-body2 .product-left .option-container .checkbox-div .decideBtn {
-  margin-left: 20px;
-  background-color: rgb(239, 175, 175);
-  border-radius: 10px;
-  color: white;
-  font-size: 10px;
-  width: 40%;
-}
-.product-body2 .product-right {
-  width: 50%;
-  background: linear-gradient(90deg, rgb(239, 175, 175), rgba(226, 216, 35, 0.2));
+
+#product > div > div > div > div.product-left > div > div > div > div > button.optionBtn.add {
+  color: black;
 }
 
 @media only screen and (max-width: 768px) {
@@ -169,24 +146,15 @@
     flex-direction: column;
     top: 0;
   }
-
-  .product-body2 {
-    width: 100%;
-    height: 100%;
-    padding-top: 30px;
-    display: flex;
-    position: relative;
-    top: 0;
-    font-family: "gordita", "sans-selif";
-    justify-content: space-around;
-}
-
   .product-body2 .product-left,
   .product-body2 .product-right {
     width: 100%;
   }
   .product-body2 .product-left .option-container-nav #navBtn {
-    color: red;
+    color: black;
+  }
+  .product-body2 .nav-content {
+    height: 85%;
   }
 }
 @media only screen and (max-width: 375px) {
@@ -209,42 +177,17 @@
     height: 50%;
     overflow-y: auto;
   }
-
-
-  .product-body2 {
-    width: 100%;
-    height: 100%;
-    padding-top: 30px;
-    display: flex;
-    position: relative;
-    top: 0;
-    font-family: "gordita", "sans-selif";
-    justify-content: space-around;
-}
+  .product-body2 .nav-content {
+    height: 60%;
+  }
+  
+  
 
 }
 
-.product-body2 {
-  width: 100%;
-  height: 100%;
-  padding-top: 30px;
-  display: flex;
-  position: relative;
-  top: 0;
-  font-family: "gordita", "sans-selif";
-  justify-content: space-around;
-}
+.MuiButtonBase-root {
 
-.product-body2 .product-left .option-container {
-  margin: 10px;
-  padding: 30px 0;
-}
+  background-color: red;
+  
 
-#product > div > div > div > div > div > div > div {
-
-
-  max-height: 400px;
-
-
-
-}
+}   /*# sourceMappingURL=product.css.map */
