--- a/src/components/product/pages/style/decideBtw.scss
+++ b/src/components/product/pages/style/decideBtw.scss
@@ -22,7 +22,7 @@
 
     .optionInputBox {
     
-      overflow-y: auto;
+      // overflow-y: auto;
 
       display: flex;
       flex-direction: column;
