--- a/src/assets/scss/_mobile-menu.scss
+++ b/src/assets/scss/_mobile-menu.scss
@@ -71,7 +71,7 @@
       width: 45px;
       height: 45px;
       position: relative;
-      left: 10px;
+      // left: 10px;
       border-radius: 50%;
       padding: 0;
       background: #2a2a2a;
