--- a/src/components/product/pages/style/myPreference.css
+++ b/src/components/product/pages/style/myPreference.css
@@ -38,7 +38,7 @@
 }
 .pref-container .checkbox-div .decideBtn {
   margin-left: 20%;
-  background-color: rgb(239, 175, 175);
+  background-color: red;
   border-radius: 10px;
   color: white;
   font-size: 10px;
