--- a/src/components/product/pages/style/myPreference.scss
+++ b/src/components/product/pages/style/myPreference.scss
@@ -49,7 +49,7 @@
         .decideBtn {
           // margin-left: 20px;
            margin-left: 20%;
-          background-color: rgba(239, 175, 175, 1);
+          background-color: red;
           border-radius: 10px;
           color: white;
           font-size: 10px;
