--- a/src/components/product/pages/style/modalPage.scss
+++ b/src/components/product/pages/style/modalPage.scss
@@ -1,11 +1,20 @@
 
-  
+
+
+
     .sm{
         font-size: 10px;
     }
     .restaurantInfo{
+        // font-family: '';
+    
+        height: 20%;
+        width: 50%;
+    
+        font-family: "gordita";
         .restaurantName{
             color:  rgb(167, 36, 0);
+    
         }
       
     }
@@ -13,27 +22,22 @@
       
         img{
             
-            width: 200px;
+            width: 30%;
             height: 150px;
             background-color: grey;
+            margin-left: 50px;
             
         }
         
     }
 
     .modalBtn{
-        font-size: 15px;
-        
-        .left{
-            border: 2px solid  rgb(238, 176, 99);
-            color:rgb(231, 127, 0);
-        }
-        
-        .right{
-            background-color:   rgb(238, 176, 99);
-            margin-left: 10px;
-            color: rgb(167, 36, 0);
-        }
+        font-size: 10px;
+        position:absolute;
+        right: 40px;
+        bottom: 50px;
+        // margin-right: 0;
+   
     }
 
 
@@ -42,25 +46,35 @@
     .restaurantImg{
         img{
             
-            width: 90%;
+            width: 100px;
             height: 100px;
             background-color: grey;
-            
+            margin-left: 10px;
         }
         
 
     }
+
     
 
     .modalBox{
         height: 60%;
     }
-    .modalBtn{
-        position: absolute;
-        bottom: 20px;
-        right: 10px;
-    }
   
+    .restaurantInfo {
+        display: flex;
+        flex-direction: column;
+      }
+    
+      .modalBtn {
+        display: flex;
+        align-items: center;
+        bottom: 50px;
+        right: 20px;
+      }
+
   }
 
-  
+  @media only screen and (max-width: 600px) {
+   
+  }
