--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -3,76 +3,7 @@
   height: 100vh;
 }
 
-.product-body1 {
-  width: 100%;
-  height: 100%;
-  padding-top: 30px;
-  margin-right: 10px;
-  display: flex;
-  flex-direction: column;
-  font-family: 'gordita', 'sans-selif';
 
-  .wt {
-    color: white;
-    margin: 10px 0;
-  }
-  
-  .product-top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    background: linear-gradient(45deg, rgb(100, 74, 246), rgb(255, 219, 250));
-    padding: 100px;
-    /* width: 100%; */
-    /* background: linear-gradient(45deg, rgb(100, 74, 246), rgb(255, 219, 250)); */
-    /* padding: 50px; */
-    /* width: 100%; */
-    /* padding: 95px; */
-    flex-direction: column;
-
-    .dfmBtn {
-      padding: 5px 20px;
-      margin: 10px;
-      border-radius: 8px;
-      cursor: pointer;
-      background-color: rgb(255, 203, 140);
-
-      border: none;
-    }
-
-    .dfmBtn:hover {
-      background-color: rgb(238, 176, 99);
-    }
-  }
-
-  .product-bottom {
-    padding: 50px;
-    height: 70%;
-    width: 100%;
-    background-color: rgba(255, 219, 250, 0.1);
-
-    .contributor-div {
-      display: flex;
-      margin-top: 30px;
-      justify-content: center;
-
-      div {
-        margin: 30px;
-
-        img {
-          background-color: grey;
-          border-radius: 20%;
-          object-fit: cover;
-        }
-
-        p {
-          margin-left: 25px;
-        }
-      }
-    }
-  }
-}
 
 .product-body2 {
   width: 100%;
@@ -83,7 +14,7 @@
   position: relative;
   top: 50px;
   font-family: 'gordita', 'sans-selif';
-padding-bottom: 100px;
+  padding-bottom: 100px;
   .product-left {
     width: 100%;
     height: 100%;
@@ -111,20 +42,14 @@ padding-bottom: 100px;
         width: 40%;
         font-size: 12px;
       }
-      .p2-nav-content {
-        // margin: 5% 20%;
-        background: linear-gradient(45deg, rgb(100, 74, 246), rgb(255, 219, 250));
+      .nav-content{
         display: flex;
-        justify-content: space-around;
-        width: 80%;
-        margin: auto;
-        height: 85%;
-        overflow-y: scroll;
-        // margin-bottom: 100px;
-    
- 
-        border-radius: 20px;
+        justify-content: center;
+
+
+        
       }
+   
     }
 
    
@@ -134,24 +59,7 @@ padding-bottom: 100px;
 }
 
 @media only screen and (max-width: 768px) {
-  .product-body1 {
-    font-size: 12px;
-
-    .product-bottom {
-      padding: 30px;
-      height: 60%;
-
-      .contributor-div {
-        flex-wrap: wrap;
-
-        div {
-          margin: 0;
-          width: 50%;
-          max-width: calc(50% - 60px);
-        }
-      }
-    }
-  }
+  
 
   .product-body2 {
     flex-direction: column;
@@ -164,6 +72,7 @@ padding-bottom: 100px;
    
       h3{
         font-size: 1.2rem;
+        margin-top: 50px;
         // margin-top: 100px;;
       }
 
@@ -178,42 +87,19 @@ padding-bottom: 100px;
       }
     }
 
-    .p2-nav-content {
-      height: 100%;
-    }
+   
   }
 }
 
 @media only screen and (max-width: 375px) {
-  .product-body1 {
-    .proudct-top {
-      font-size: 10px;
-      padding-bottom: 20px;
-      height: 50%;
-    }
 
-    .product-bottom {
-      padding: 20px;
-
-      .contributor-div {
-        margin: 0;
-        padding: 0;
-
-        div {
-          margin: 10px;
-        }
-      }
-    }
-  }
   .product-body2 {
-    top: 40%;
+    // top: 40%;
     .option-container {
       height: 100%;
       // overflow-y: auto;
     }
-    .p2-nav-content {
-      height: 80%;
-    }
+  
   }
 }
 
