--- a/src/components/product/pages/style/myPreference.scss
+++ b/src/components/product/pages/style/myPreference.scss
@@ -1,104 +1,109 @@
 .pref-container {
-    // margin: 10px;
-    // margin-left: 0%;
-    display: flex;
-    flex-direction: column;
+  // margin: 10px;
+  // margin-left: 0%;
+  display: flex;
+  flex-direction: column;
 
+  height: 80%;
+  width: 80%;
+  align-items: center;
+  padding: 20px;
+  border-radius: 20px;
+  background: linear-gradient(45deg, rgb(100, 74, 246), rgb(255, 219, 250));
 
-    height: 80%;
-    width: 80%;
-    align-items: center;
-    padding: 20px;
-    border-radius: 20px;
-    background: linear-gradient(45deg, rgb(100, 74, 246), rgb(255, 219, 250));
-  
-    
-    h5,
-    p {
-      // margin: 0;
-      padding: 2px 10px;
-      color: black;
-    }
-    p {
+  h5,
+  p {
+    // margin: 0;
+    padding: 2px 10px;
+    color: black;
+  }
+  p {
     font-size: 12px;
-    }
-    .checkbox-div {
-        min-width: 500px;
-        .checkbox-word {
-          i {
-            background-color: rgb(45, 43, 43);
-            color: white;
-            font-size: 8px;
-            padding: 0 5px;
-            text-align: center;
-            width: fit-content;
-          }
-        }
-  
-        .checkbox-group {
-          display: flex;
-          flex-direction: column;
-          // overflow-y: scroll;
-          // height: 350px;
-        }
-   
-        .checkbox-label{
-          font-size: 10px;
-          color: rgb(48, 45, 45);
-        }
-        .decideBtn {
-          // margin-left: 20px;
-           margin-left: 20%;
-          background-color: red;
-          border-radius: 10px;
-          color: white;
-          font-size: 10px;
-          width: 40%;
-          // margin-bottom: ;
-        }
+  }
+  .checkbox-div {
+    min-width: 500px;
+    .checkbox-word {
+      i {
+        background-color: rgb(45, 43, 43);
+        color: white;
+        font-size: 8px;
+        padding: 0 5px;
+        text-align: center;
+        width: fit-content;
       }
-      
+    }
+
+    .checkbox-group {
+      display: flex;
+      flex-direction: column;
+      // overflow-y: scroll;
+      // height: 350px;
+    }
+
+    .checkbox-label {
+      font-size: 10px;
+      color: rgb(48, 45, 45);
+    }
+    .decideBtn {
+      // margin-left: 20px;
+      margin-left: 30%;
+      background-color: rgb(238, 176, 99);
+      border-radius: 10px;
+      color: white;
+      font-size: 10px;
+      width: 30%;
+
+      // margin-bottom: ;
+    }
+
+    .decideBtn:hover {
+      background-color: rgb(234, 154, 56);
+    }
+  }
 }
 
-
 @media only screen and (max-width: 768px) {
-    .pref-container{
-     
-      .checkbox-word{
-        p{
-          font-size: 10px;
-          margin-left: 30%;
-        
-         }
-         i{
-          font-size: 6px;
-          line-height: 10px;
-          display: block;
-         }
-
+  .pref-container {
+    .checkbox-word {
+      p {
+        font-size: 10px;
+        margin-left: 30%;
       }
-        h5{
-            font-size: 15px;
-        }
-        .checkbox-group{
-          margin-left: 30%;
-          
-          .checkbox-label{
-            float: left;
-            width: 30%;
-          }
-        }
-     
-   
+      i {
+        font-size: 6px;
+        line-height: 10px;
+        display: block;
+      }
+    }
+
+    h5 {
+      font-size: 15px;
+    }
+    .checkbox-group {
+      margin-left: 30%;
+
+      .checkbox-label {
+        float: left;
+        width: 30%;
+      }
+  
+    }
+    .decideBtn {
+      margin-left: 40%;
+    }
+  
+      // margin-lef
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .pref-container {
+    margin-left: 10%;
+    .checkbox-div {
+      .decideBtn {
+        margin-left: 40%;
+      }
     }
   
   }
-  
-  @media only screen and (max-width: 375px) {
-  
-    .pref-container{
-        margin-left: 10%;
-    
-    }
-  }
-  
+}
